[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/Player/Lester.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Shared/World.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Enemy/Morea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/world/kiwihug-MS9Tnh3if1o-unsplash (3).jpg" type="Texture" id=4]
[ext_resource path="res://Assets/world/Cover.png" type="Texture" id=5]
[ext_resource path="res://Scenes/World/Frame.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/World/GameState.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/world/VeraMono-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Audio/destijl-fight.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/destijl-menu.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Player/heart-empty.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/heart-full.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.905882, 0.0196078, 0.0117647, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0196078, 0.00392157, 0.0117647, 1 )

[sub_resource type="DynamicFont" id=8]
size = 19
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 640, 921 )
modulate_color = Color( 0.0196078, 0.00392157, 0.0117647, 0.0941176 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 28
outline_color = Color( 0.917647, 0.937255, 0.913725, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
outline_color = Color( 0.917647, 0.937255, 0.913725, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.917647, 0.937255, 0.913725, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.917647, 0.937255, 0.913725, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0196078, 0.00392157, 0.0117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.917647, 0.937255, 0.913725, 1 )

[sub_resource type="DynamicFont" id=14]
size = 18
font_data = ExtResource( 8 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="GameState" parent="." instance=ExtResource( 7 )]

[node name="Battle" type="Node2D" parent="."]

[node name="BattleMusic" type="AudioStreamPlayer2D" parent="Battle"]
stream = ExtResource( 9 )
volume_db = -12.814

[node name="Lester" parent="Battle" instance=ExtResource( 1 )]
position = Vector2( 320, 272 )
z_index = 1

[node name="Morea" parent="Battle" instance=ExtResource( 3 )]
position = Vector2( 320, 48 )
z_index = 1

[node name="UI" type="Node2D" parent="Battle"]

[node name="MoreaUI" type="Node2D" parent="Battle/UI"]
z_index = 2

[node name="MoreaHealth" type="ProgressBar" parent="Battle/UI/MoreaUI"]
margin_left = 70.0
margin_top = 323.0
margin_right = 570.0
margin_bottom = 345.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false

[node name="MoreaLabel" type="Label" parent="Battle/UI/MoreaUI"]
margin_left = 52.0
margin_top = 297.0
margin_right = 145.0
margin_bottom = 329.0
rect_pivot_offset = Vector2( 86, 74 )
custom_colors/font_color = Color( 0.0196078, 0.00392157, 0.0117647, 1 )
custom_fonts/font = SubResource( 8 )
text = "Morea"
align = 1
valign = 1

[node name="LesterUI" type="Node2D" parent="Battle/UI"]
z_index = 2

[node name="HeartEmpty" type="TextureRect" parent="Battle/UI/LesterUI"]
margin_left = 5.0
margin_top = 5.0
margin_right = 164.0
margin_bottom = 38.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="HeartFull" type="TextureRect" parent="Battle/UI/LesterUI"]
margin_left = 5.0
margin_top = 5.0
margin_right = 166.0
margin_bottom = 36.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="Canvas" type="TextureRect" parent="Battle"]
modulate = Color( 0.992157, 0.988235, 0.976471, 0.733333 )
margin_left = -145.0
margin_top = 500.0
margin_right = 495.0
margin_bottom = 1421.0
rect_rotation = 270.0
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Battle/Canvas"]
margin_right = 640.0
margin_bottom = 921.0

[node name="Frame" parent="." instance=ExtResource( 6 )]

[node name="Menu" type="Node2D" parent="."]
z_index = 2

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="Menu"]
stream = ExtResource( 10 )

[node name="HomeScreen" type="TextureRect" parent="Menu"]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 5 )

[node name="De Stijl" type="Label" parent="Menu"]
margin_left = 97.0
margin_top = 61.0
margin_right = 242.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 86, 74 )
custom_fonts/font = SubResource( 5 )
text = "De
Stijl"
align = 1
valign = 1

[node name="Battle" type="Button" parent="Menu"]
margin_left = 246.0
margin_top = 184.0
margin_right = 339.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 38, 18 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.0196078, 0.00392157, 0.0117647, 1 )
custom_colors/font_color_hover = Color( 0.0196078, 0.00392157, 0.0117647, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Battle"
icon_align = 1

[node name="Gallery" type="Button" parent="Menu"]
margin_left = 94.0
margin_top = 266.0
margin_right = 227.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 93, 23 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.917647, 0.937255, 0.913725, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Gallery"
icon_align = 1

[node name="Controls" type="Button" parent="Menu"]
margin_left = 412.0
margin_top = 301.0
margin_right = 514.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 93, 23 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.917647, 0.937255, 0.913725, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Controls"
icon_align = 1

[node name="Gallery" type="Node2D" parent="."]
visible = false
z_index = 3

[node name="Gallery" type="Control" parent="Gallery"]
margin_left = 1.0
margin_right = 639.0
margin_bottom = 360.0

[node name="ColorRect" type="ColorRect" parent="Gallery/Gallery"]
margin_left = -4.0
margin_right = 644.0
margin_bottom = 360.0
color = Color( 0.0196078, 0.00392157, 0.0117647, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Gallery/Gallery"]
margin_top = 50.0
margin_right = 638.0
margin_bottom = 360.0

[node name="GalleryWall" type="GridContainer" parent="Gallery/Gallery/ScrollContainer"]
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3

[node name="Label" type="Label" parent="Gallery/Gallery"]
margin_right = 638.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "GALLERY"
align = 1
valign = 1

[node name="CloseGallery" type="Button" parent="Gallery/Gallery"]
margin_left = 606.0
margin_top = 2.0
margin_right = 636.0
margin_bottom = 22.0
custom_colors/font_color_hover = Color( 0.917647, 0.937255, 0.913725, 1 )
custom_colors/font_color_pressed = Color( 0.917647, 0.937255, 0.913725, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "X"
icon_align = 1

[node name="Controls" type="Label" parent="Gallery/Gallery"]
margin_left = 138.0
margin_top = 63.0
margin_right = 528.0
margin_bottom = 302.0
custom_colors/font_color = Color( 0.917647, 0.937255, 0.913725, 1 )
custom_fonts/font = SubResource( 14 )
text = "Controls:


           w                   ^
Walk:    a s d    (or)      <  v  >


Dash:   Shift


Attack: Enter (or) Spacebar (or) Left Click"

[connection signal="pressed" from="Menu/Battle" to="." method="_on_Battle_pressed"]
[connection signal="pressed" from="Menu/Gallery" to="." method="_on_Gallery_pressed"]
[connection signal="pressed" from="Menu/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Menu/Controls" to="." method="_on_Gallery_pressed"]
[connection signal="pressed" from="Gallery/Gallery/CloseGallery" to="." method="_on_CloseGallery_pressed"]
